Mengatur element HTML agar cocok

--- a/dashboard/baby-chart.html
+++ b/dashboard/baby-chart.html
@@ -91,7 +91,7 @@
             </a>
           </li>
           <li>
-            <a href="./data-chart.html">
+            <a href="./baby-chart.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
