--- a/dashboard/baby-data.html
+++ b/dashboard/baby-data.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[#FEFEFF]">
+  <body class="bg-[#FEFEFF] overflow-x-hidden">
     <!-- begin::Aside -->
     <aside
       class="hidden min-[840px]:flex fixed top-0 left-0 flex-col justify-between items-center bg-[#272C49] h-screen px-[14px] py-[40px] max-w-[80px]"
@@ -74,7 +74,7 @@
                 <g clip-path="url(#clip0_195_866)">
                   <path
                     d="M15 12.1664H0.00585938C0.158203 7.82461 2.41992 4.01602 5.80078 1.74258C6.58008 1.2211 7.60547 1.49063 8.13867 2.25821L15 12.1664ZM22.5 10.2914C22.5 8.22305 24.1816 6.54141 26.25 6.54141H28.125C29.1621 6.54141 30 7.3793 30 8.41641C30 9.45352 29.1621 10.2914 28.125 10.2914H26.25V14.0414C26.25 15.518 25.9102 16.9828 25.2539 18.348C24.5977 19.7133 23.625 20.9555 22.4062 21.9984C21.1875 23.0414 19.7402 23.8734 18.1465 24.4359C16.5527 24.9984 14.8477 25.2914 13.125 25.2914C11.4023 25.2914 9.69727 24.9984 8.10352 24.4359C6.50977 23.8734 5.0625 23.0414 3.84375 21.9984C2.625 20.9555 1.6582 19.7133 0.996094 18.348C0.333984 16.9828 0 15.518 0 14.0414H13.125H22.5V10.2914ZM4.6875 25.2914C5.43342 25.2914 6.14879 25.5877 6.67624 26.1152C7.20368 26.6426 7.5 27.358 7.5 28.1039C7.5 28.8498 7.20368 29.5652 6.67624 30.0926C6.14879 30.6201 5.43342 30.9164 4.6875 30.9164C3.94158 30.9164 3.22621 30.6201 2.69876 30.0926C2.17132 29.5652 1.875 28.8498 1.875 28.1039C1.875 27.358 2.17132 26.6426 2.69876 26.1152C3.22621 25.5877 3.94158 25.2914 4.6875 25.2914ZM18.75 28.1039C18.75 27.358 19.0463 26.6426 19.5738 26.1152C20.1012 25.5877 20.8166 25.2914 21.5625 25.2914C22.3084 25.2914 23.0238 25.5877 23.5512 26.1152C24.0787 26.6426 24.375 27.358 24.375 28.1039C24.375 28.8498 24.0787 29.5652 23.5512 30.0926C23.0238 30.6201 22.3084 30.9164 21.5625 30.9164C20.8166 30.9164 20.1012 30.6201 19.5738 30.0926C19.0463 29.5652 18.75 28.8498 18.75 28.1039Z"
-                    fill="white"
+                    fill="#F8D16D"
                   />
                 </g>
                 <defs>
@@ -91,7 +91,7 @@
             </a>
           </li>
           <li>
-            <a href="./data-chart.html">
+            <a href="./baby-chart.html">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -102,7 +102,7 @@
                 <g clip-path="url(#clip0_195_868)">
                   <path
                     d="M9.13095 4.90444C9.13095 3.62281 10.2907 2.58301 11.7202 2.58301H13.4464C14.8759 2.58301 16.0357 3.62281 16.0357 4.90444V21.9282C16.0357 23.2099 14.8759 24.2497 13.4464 24.2497H11.7202C10.2907 24.2497 9.13095 23.2099 9.13095 21.9282V4.90444ZM0.5 14.1902C0.5 12.9085 1.65978 11.8687 3.08929 11.8687H4.81548C6.24498 11.8687 7.40476 12.9085 7.40476 14.1902V21.9282C7.40476 23.2099 6.24498 24.2497 4.81548 24.2497H3.08929C1.65978 24.2497 0.5 23.2099 0.5 21.9282V14.1902ZM20.3512 5.67825H22.0774C23.5069 5.67825 24.6667 6.71805 24.6667 7.99967V21.9282C24.6667 23.2099 23.5069 24.2497 22.0774 24.2497H20.3512C18.9217 24.2497 17.7619 23.2099 17.7619 21.9282V7.99967C17.7619 6.71805 18.9217 5.67825 20.3512 5.67825Z"
-                    fill="#F8D16D"
+                    fill="white"
                   />
                 </g>
                 <defs>
@@ -261,7 +261,7 @@
                     <g clip-path="url(#clip0_195_866)">
                       <path
                         d="M15 12.1664H0.00585938C0.158203 7.82461 2.41992 4.01602 5.80078 1.74258C6.58008 1.2211 7.60547 1.49063 8.13867 2.25821L15 12.1664ZM22.5 10.2914C22.5 8.22305 24.1816 6.54141 26.25 6.54141H28.125C29.1621 6.54141 30 7.3793 30 8.41641C30 9.45352 29.1621 10.2914 28.125 10.2914H26.25V14.0414C26.25 15.518 25.9102 16.9828 25.2539 18.348C24.5977 19.7133 23.625 20.9555 22.4062 21.9984C21.1875 23.0414 19.7402 23.8734 18.1465 24.4359C16.5527 24.9984 14.8477 25.2914 13.125 25.2914C11.4023 25.2914 9.69727 24.9984 8.10352 24.4359C6.50977 23.8734 5.0625 23.0414 3.84375 21.9984C2.625 20.9555 1.6582 19.7133 0.996094 18.348C0.333984 16.9828 0 15.518 0 14.0414H13.125H22.5V10.2914ZM4.6875 25.2914C5.43342 25.2914 6.14879 25.5877 6.67624 26.1152C7.20368 26.6426 7.5 27.358 7.5 28.1039C7.5 28.8498 7.20368 29.5652 6.67624 30.0926C6.14879 30.6201 5.43342 30.9164 4.6875 30.9164C3.94158 30.9164 3.22621 30.6201 2.69876 30.0926C2.17132 29.5652 1.875 28.8498 1.875 28.1039C1.875 27.358 2.17132 26.6426 2.69876 26.1152C3.22621 25.5877 3.94158 25.2914 4.6875 25.2914ZM18.75 28.1039C18.75 27.358 19.0463 26.6426 19.5738 26.1152C20.1012 25.5877 20.8166 25.2914 21.5625 25.2914C22.3084 25.2914 23.0238 25.5877 23.5512 26.1152C24.0787 26.6426 24.375 27.358 24.375 28.1039C24.375 28.8498 24.0787 29.5652 23.5512 30.0926C23.0238 30.6201 22.3084 30.9164 21.5625 30.9164C20.8166 30.9164 20.1012 30.6201 19.5738 30.0926C19.0463 29.5652 18.75 28.8498 18.75 28.1039Z"
-                        fill="white"
+                        fill="#F8D16D"
                       />
                     </g>
                     <defs>
@@ -294,7 +294,7 @@
                     <g clip-path="url(#clip0_195_868)">
                       <path
                         d="M9.13095 4.90444C9.13095 3.62281 10.2907 2.58301 11.7202 2.58301H13.4464C14.8759 2.58301 16.0357 3.62281 16.0357 4.90444V21.9282C16.0357 23.2099 14.8759 24.2497 13.4464 24.2497H11.7202C10.2907 24.2497 9.13095 23.2099 9.13095 21.9282V4.90444ZM0.5 14.1902C0.5 12.9085 1.65978 11.8687 3.08929 11.8687H4.81548C6.24498 11.8687 7.40476 12.9085 7.40476 14.1902V21.9282C7.40476 23.2099 6.24498 24.2497 4.81548 24.2497H3.08929C1.65978 24.2497 0.5 23.2099 0.5 21.9282V14.1902ZM20.3512 5.67825H22.0774C23.5069 5.67825 24.6667 6.71805 24.6667 7.99967V21.9282C24.6667 23.2099 23.5069 24.2497 22.0774 24.2497H20.3512C18.9217 24.2497 17.7619 23.2099 17.7619 21.9282V7.99967C17.7619 6.71805 18.9217 5.67825 20.3512 5.67825Z"
-                        fill="#F8D16D"
+                        fill="white"
                       />
                     </g>
                     <defs>
@@ -385,42 +385,18 @@
         </div>
 
         <div class="flex flex-col w-full h-full gap-y-5">
+          <!-- begin::Search -->
           <div class="grid md:grid-cols-4 gap-5 md:gap-7">
-            <div
-              class="md:col-span-2 flex items-center w-full px-4 py-3.5 rounded-xl border-[1px] border-solid border-[#D1D9E2] bg-white overflow-hidden gap-x-2"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 text-gray-400"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-                />
-              </svg>
-              <input
-                class="peer h-full w-full outline-none text-sm min-[840px]:text-base placeholder:text-gray-400 text-[#36455B]"
-                type="text"
-                id="search"
-                placeholder="Search"
-              />
-            </div>
-  
-            <div class="relative w-full">
+            <div class="relative w-full md:col-span-3">
               <select
-                id="kategori"
-                name="kategori"
+                id="status_gizi"
+                name="status_gizi"
                 class="w-full rounded-xl text-sm min-[840px]:text-base text-gray-400 px-4 py-3.5 border-[1px] border-solid border-[#D1D9E2] focus:outline-none appearance-none"
               >
-                <option value="10" selected>10 enteries</option>
-                <option value="25">25 enteries</option>
-                <option value="50">50 enteries</option>
-                <option value="100">100 enteries</option>
+                <option value="semua" selected>Semua status</option>
+                <option value="baik">Baik</option>
+                <option value="kurang">Kurang</option>
+                <option value="buruk">Buruk</option>
               </select>
               <div
                 class="absolute text-xl text-amber-500 font-bold top-1/2 right-[14px] translate-y-[-50%]"
@@ -438,42 +414,119 @@
               </div>
             </div>
 
-            <button class="w-full bg-[#1E3465] px-4 py-3.5 text-white rounded-xl">
+            <!-- <div class="relative w-full">
+              <select
+                id="kategori"
+                name="kategori"
+                class="w-full rounded-xl text-sm min-[840px]:text-base text-gray-400 px-4 py-3.5 border-[1px] border-solid border-[#D1D9E2] focus:outline-none appearance-none"
+              >
+                <option value="10" selected>10 entries</option>
+                <option value="25">25 entries</option>
+                <option value="50">50 entries</option>
+                <option value="100">100 entries</option>
+              </select>
+              <div
+                class="absolute text-xl text-amber-500 font-bold top-1/2 right-[14px] translate-y-[-50%]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="fill-gray-400 h-[0.9em]"
+                  viewBox="0 0 448 512"
+                >
+                  <path
+                    d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
+                  />
+                </svg>
+              </div>
+            </div> -->
+
+            <button onclick="addBabyData()" class="w-full bg-[#1E3465] px-4 py-3.5 text-white rounded-xl text-sm min-[840px]:text-base">
               Add Data
             </button>
           </div>
+          <!-- end::Search -->
 
-          <table class="table-fixed border-collapse">
-            <thead>
-              <tr>
-                <th class="border border-solid border-[#D1D9E2]">Song</th>
-                <th>Artist</th>
-                <th>Year</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-                <td>Malcolm Lockyer</td>
-                <td>1961</td>
-              </tr>
-              <tr>
-                <td>Witchy Woman</td>
-                <td>The Eagles</td>
-                <td>1972</td>
-              </tr>
-              <tr>
-                <td>Shining Star</td>
-                <td>Earth, Wind, and Fire</td>
-                <td>1975</td>
-              </tr>
-            </tbody>
-          </table>
+          <!-- begin::Baby's Data -->
+          <div class="w-full border border-[#D1D9E2] rounded-xl overflow-x-scroll scrollbar__hidden">
+            <table class="w-full min-w-[1024px] table-fixed border-collapse select-none">
+              <thead>
+                <tr class="border-b border-[#D1D9E2]">
+                  <th class="text-[#272C49] text-center py-2 w-16">No</th>
+                  <th class="text-[#272C49] text-center py-2">Tanggal</th>
+                  <th class="text-[#272C49] text-center py-2">Berat (kg)</th>
+                  <th class="text-[#272C49] text-center py-2">Tinggi (cm)</th>
+                  <th class="text-[#272C49] text-center py-2">L. Kepala (cm)</th>
+                  <th class="text-[#272C49] text-center py-2">Status Gizi</th>
+                  <th class="text-[#272C49] text-center py-2">Aksi</th>
+                </tr>
+              </thead>
+              <tbody id="baby_data_list">
+                
+              </tbody>
+            </table>
+            <div id="fetch_info" class="hidden text-center py-3.5">
+              <span>Loading...</span>
+            </div>
+          </div>
+          <!-- end::Baby's Data -->
         </div>
       </div>
     </div>
     <!-- end::Content -->
 
+    <!-- begin::All Modal -->
+    <!-- Add -->
+    <div id="add_modal_container" class="fixed top-0 left-0 w-full h-screen bg-black/50" style="display: none;">
+      <div class="flex w-full h-full justify-center items-center px-6">
+        <form id="add_modal_form" class="relative flex flex-col w-full max-w-[600px] py-[26px] px-[18px] min-[840px]:px-[26px] bg-white rounded-xl gap-y-6 min-[840px]:gap-y-8">
+          <div class="text-start min-[840px]:text-center">
+            <h1 class="font-bold text-[22px] min-[840px]:text-[24px] text-[#272C49]">Add Data Form</h1>
+            <p class="text-xs min-[840px]:text-sm text-[#898989]">Lengkapi semua data mengenai anak anda</p>
+          </div>
+          <div class="flex flex-col gap-y-5">
+            <input type="date" id="tanggal_pertumbuhan" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" required>
+            <input type="text" id="berat" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Berat Badan cth:(2.55)" required>
+            <input type="text" id="tinggi" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Tinggi Badan cth:(6.2)" required>
+            <input type="text" id="lingkar_kepala" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Lingkar Kepala cth:(30.212)" required>
+          </div>
+          <button type="submit" class="w-full bg-[#1E3465] px-2 py-2.5 text-white rounded-lg text-sm min-[840px]:text-base">
+            Add
+          </button>
+
+          <button id="close_add_modal" type="button" class="bg-[#1E3465] px-1.5 min-[840px]:px-2 py-1 absolute top-4 right-4 min-[840px]:right-6 cursor-pointer rounded-full">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 min-[840px]:w-5 fill-white" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Edit -->
+    <div id="edit_modal_container" class="fixed top-0 left-0 w-full h-screen bg-black/50" style="display: none;">
+      <div class="flex w-full h-full justify-center items-center px-6">
+        <form id="edit_modal_form" class="relative flex flex-col w-full max-w-[600px] py-[26px] px-[18px] min-[840px]:px-[26px] bg-white rounded-xl gap-y-6 min-[840px]:gap-y-8">
+          <div class="text-start min-[840px]:text-center">
+            <h1 class="font-bold text-[22px] min-[840px]:text-[24px] text-[#272C49]">Edit Data Form</h1>
+            <p class="text-xs min-[840px]:text-sm text-[#898989]">Edit data anak anda</p>
+          </div>
+          <div class="flex flex-col gap-y-5">
+            <input type="date" id="edit_tanggal_pertumbuhan" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" required>
+            <input type="text" id="edit_berat" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Berat Badan cth:(2.55)" required>
+            <input type="text" id="edit_tinggi" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Tinggi Badan cth:(6.2)" required>
+            <input type="text" id="edit_lingkar_kepala" class="text-sm min-[840px]:text-base px-3 py-2 focus:outline-none border border-[#D1D9E2] text-[#474F7C] placeholder:text-[#898989] rounded-lg" pattern="^[0-9]*\.?[0-9]*$" placeholder="Lingkar Kepala cth:(30.212)" required>
+          </div>
+          <button type="submit" class="w-full bg-[#1E3465] px-2 py-2.5 text-white rounded-lg text-sm min-[840px]:text-base">
+            Edit
+          </button>
+
+          <button id="close_edit_modal" type="button" class="bg-[#1E3465] px-1.5 min-[840px]:px-2 py-1 absolute top-4 right-4 min-[840px]:right-6 cursor-pointer rounded-full">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 min-[840px]:w-5 fill-white" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+          </button>
+        </form>
+      </div>
+    </div>
+    <!-- end::All Modal -->
+
     <script src="../assets/js/dashboard.js"></script>
+    <script src="../assets/js/baby-data.js"></script>
   </body>
 </html>
