Selesai membuat logout dan auth check logic

--- a/dashboard/immunization.html
+++ b/dashboard/immunization.html
@@ -147,7 +147,7 @@
           </li>
         </ul>
       </nav>
-      <button>
+      <button class="logout_btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="28"
@@ -319,7 +319,7 @@
             </ul>
           </nav>
 
-          <button class="mt-auto block w-full flex justify-start items-center gap-x-4 px-5 py-5">
+          <button class="logout_btn mt-auto block w-full flex justify-start items-center gap-x-4 px-5 py-5">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="23"
@@ -660,5 +660,7 @@
     <!-- end::Dashboard - Immunization -->
 
     <script src="../assets/js/dashboard.js"></script>
+    <script src="../assets/js/logout.js"></script>
+    <script src="../assets/js/auth-check.js"></script>
   </body>
 </html>
