Add logout, auth and logout_btn class

--- a/dashboard/baby-data.html
+++ b/dashboard/baby-data.html
@@ -148,7 +148,7 @@
           </li>
         </ul>
       </nav>
-      <button>
+      <button class="logout_btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="28"
@@ -347,7 +347,7 @@
           </nav>
 
           <button
-            class="mt-auto block w-full flex justify-start items-center gap-x-4 px-5 py-5"
+            class="logout_btn mt-auto block w-full flex justify-start items-center gap-x-4 px-5 py-5"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -528,5 +528,7 @@
 
     <script src="../assets/js/dashboard.js"></script>
     <script src="../assets/js/baby-data.js"></script>
+    <script src="../assets/js/logout.js"></script>
+    <script src="../assets/js/auth-check.js"></script>
   </body>
 </html>
